chandeliers-lus/tests/warn/options/redundant.stderr
error: #[trace] is already set by a previous attribute
 --> tests/warn/options/redundant.rs:6:5
  |
6 |     #[trace]
  |     ^^^^^^^^
  |
note: Previously declared here
 --> tests/warn/options/redundant.rs:5:5
  |
5 |     #[trace]
  |     ^^^^^^^^

error: #[trace] is already set by a previous attribute
 --> tests/warn/options/redundant.rs:7:5
  |
7 |     #[trace]
  |     ^^^^^^^^
  |
note: Previously declared here
 --> tests/warn/options/redundant.rs:6:5
  |
6 |     #[trace]
  |     ^^^^^^^^

error: #[export] is already set by a previous attribute
  --> tests/warn/options/redundant.rs:12:5
   |
12 |     #[export]
   |     ^^^^^^^^^
   |
note: Previously declared here
  --> tests/warn/options/redundant.rs:11:5
   |
11 |     #[pub]
   |     ^^^^^^
