chandeliers-lus/tests/warn/options/redundant.rs
#![deny(warnings)]

chandeliers_lus::decl! {
    #[trace]
    #[trace]
    #[trace]
    node foo() returns ();
    let tel;

    #[pub]
    #[export]
    node bar() returns ();
    let tel;
}

fn main() {}
